--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,8 @@ version: 2.1
 jobs:
   build:
     docker:
+      - image: cimg/base:2022.03
       - image: cimg/postgres:14.0
-        auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD
     steps:
       - checkout # check out the code in the project directory
       - run: echo "hello world" # run the `echo` command
